# konoha

./: README.md  __init__.py  be_theory.py  colormaper.py  constants.py  dynamic.py  find_bisectors.py  get_data.py  linesDict.py  mag2flx.py  pulsation.py  pyproject.toml  radial_velocity.py  sed_tools.py  sph_functions.py  utils.py  xdr_reader.py
defs/stellar_parameters/: oblat1.00_h0.1.txt  oblat1.00_h0.7.txt  oblat1.10_h0.1.txt  oblat1.10_h0.3.txt  oblat1.20_h0.1.txt  oblat1.20_h0.5.txt  oblat1.20_h0.7.txt  oblat1.30_h0.3.txt  oblat1.30_h0.5.txt  oblat1.30_h0.7.txt  oblat1.40_h0.7.txt  oblat1.45_h0.1.txt  oblat1.45_h0.3.txt
konoha/: bynary_calculator.py  dynamic.py  plot_fullsed.py  sed_tools.py  spec_norm.py  xdr_reader.py
konoha.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
konoha/defs/stellar_parameters/: oblat1.00_h0.3.txt  oblat1.00_h0.5.txt  oblat1.10_h0.5.txt  oblat1.10_h0.7.txt  oblat1.20_h0.3.txt  oblat1.30_h0.1.txt  oblat1.40_h0.1.txt  oblat1.40_h0.3.txt  oblat1.40_h0.5.txt  oblat1.45_h0.5.txt  oblat1.45_h0.7.txt
