[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "konoha"
version = "0.1.0"
description = "Some useful functions"
authors = [
    {name = "ACR", email = "inthetimevortex@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "scikit-learn>=1.0",
]

[project.urls]
"Homepage" = "https://github.com/inthetimevortex/konoha"
